--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
             </div>
 
             <div class="box">
-                <h3 class="title">newsletter</h3>
+                <h3 class="title">More Info?</h3>
                <form action="">
                    <input type="email" placeholder="enter your email">
                    <input type="submit" class="btn" value="send">
